CHANGES
-------
Version 0.10 : In Progress
--------------------------
04/29/2018 New task-related function.  get_all_tasks() returns a list of all active
           Tasks. For example:

               tasks = await get_all_tasks()

04/29/2018 Curio now properly allows async context managers to be defined using
           context.asynccontextmanager.  Issue #247.

04/29/2018 Removed the cancel_remaining keyword argument from TaskGroup.next_done()

04/28/2018 Added new "object" wait mode to TaskGroup.  It waits for the
           first non-None result to be returned by a task.  Then all 
           remaining tasks are cancelled.  For example:

               async def coro1():
                   await sleep(1)
                   return None

               async def coro2():
                   await sleep(2)
                   return 37

               async def coro3():
                   await sleep(3)
                   return 42
 
               async with TaskGroup(wait=object) as tg:
                   await tg.spawn(coro1)      # Ignored (returns None)
                   await tg.spawn(coro2)      # Returns result
                   await tg.spawn(coro3)      # Cancelled

               print(tg.completed.result)  # -> 37

04/27/2018 Removed the ignore_result keyword argument to TaskGroup.spawn().
           It's not really needed and the extra complexity isn't worth it.

04/27/2018 Added TaskGroup.next_result() function.  It's mostly a convenience
           function for returning the result of the next task that completes.
           If the task failed with an exception, that exception is raised.

04/14/2018 Changed the method of spawning processes for run_in_process to
           use the "spawn" method of the multiprocessing module. This 
	   prevents issues of having open file-descriptors cloned by
           accident via fork().  For example, as in Issue #256.

Version 0.9 : March 10, 2018
----------------------------